# yarr

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  cargo.toml  deploy_to_githubio.sh  host-www.sh  rust-toolchain.toml
owr/: Cargo.toml
owr/src/: aabb.rs  bvh.rs  camera.rs  color.rs  examples.rs  hittable.rs  lib.rs  material.rs  perlin.rs  ray.rs  sampling.rs  sphere.rs  texture.rs  types.rs  utils.rs  vec3.rs
sowr/: Cargo.toml
sowr/src/: color.rs  lib.rs  material.rs  types.rs  utils.rs
src/: camera.rs  color.rs  hittable.rs  main.rs  ray.rs  sphere.rs  vec3.rs
web/: Cargo.toml  build.sh  build_and_host.sh  host_local_www.sh  index.html  index.js  package-lock.json  package.json  serve.json  server.py  wasm-worker.js
web/.cargo/: config
web/src/: lib.rs
web/web-src/: index.html  index.js  manual-web-worker.js  manual-worker-pool.js  wasm-worker.js
web/www/: .gitignore  index.html  index.js  package-lock.json  package.json  wasm-worker.js
