[package]
name = "owr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston-float = "1.0.1"
vecmath = "1.0.0"
fastrand = "1.5.0"
rayon = "1.5.1"
web-sys = { version = "0.3.55", features = ["console"] }
