# Required for wasm using nightly build of rust (shared memory, atomics)
cargo-features = ["edition2021"]

[package]
name = "owr"
version = "0.1.0"
edition = "2021"

[features]
default = ["progress-ui"]
progress-ui = ["indicatif"]

[dependencies]
piston-float = "1.0.1"
vecmath = "1.0.0"
fastrand = "1.5.0"
rayon = "1.5.1"
web-sys = { version = "0.3.55", features = ["console"]}
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
indicatif = {version = "0.16.2", features = ["rayon"], optional = true}
