# Required for wasm using nightly build of rust (shared memory, atomics)
cargo-features = ["edition2021"]

[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.78" }
wasm-bindgen-rayon = { version = "1.0.3", optional = true }
rayon = { version = "1.5.1", optional = true }
web-sys = { version = "0.3.55", features = ['console', 'Document', 'Window'] }
owr = { path = "../owr" }
console_error_panic_hook = { version = "0.1.6", optional = true }
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
reqwest = {version = "0.11.8"}
wasm-bindgen-futures = "0.4.28"

[features]
default = ["console_error_panic_hook"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
